tests/purs/failing/4028.out
Error found:
in module [33mMain[0m
at tests/purs/failing/4028.purs:29:12 - 29:37 (line 29, column 12 - line 29, column 37)

  No type class instance was found for
  [33m                    [0m
  [33m  Main.TLShow (S i2)[0m
  [33m                    [0m
  The following instance partially overlaps the above constraint, which means the rest of its instance chain will not be considered:

    [33mMain.tlShow2[0m


while applying a function [33mgo[0m
  of type [33mTLShow @t0 t1 => Proxy @t0 t1 -> Int -> String[0m
  to argument [33mProxy[0m
while inferring the type of [33mgo Proxy[0m
in value declaration [33mpeano[0m

where [33mi2[0m is a rigid type variable
        bound at (line 0, column 0 - line 0, column 0)
      [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

